swagger docs and improvement
